--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,10 @@
     <string name="radiobutton_main_bottom_one">首页</string>
     <string name="radiobutton_main_bottom_two">首页</string>
     <string name="radiobutton_main_bottom_three">首页</string>
+
+    <!-- for custom font -->
+    <string name="font_palatino">palatino.otf</string>
+    <string name="font_regular">GTWalsheim_Regular.otf</string>
+    <string name="font_medium">GTWalsheim_Medium.otf</string>
+    <string name="font_bold">GTWalsheim_Bold.otf</string>
 </resources>
